[project]
name = "medium-analyser-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.5.0",
    "isort>=8.0.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.18",
    "python-dotenv>=1.2.2",
]
